Snapshot the right commit

--- a/charts/paradedb/Chart.yaml
+++ b/charts/paradedb/Chart.yaml
@@ -5,7 +5,7 @@ home: https://github.com/paradedb/helm-charts
 icon: https://raw.githubusercontent.com/paradedb/paradedb/dev/docs/logo/readme.svg
 keywords:
   - paradedb
-  - pg_lakehouse
+  - pg_analytics
   - pg_search
 maintainers:
   - name: ParadeDB
